# head-pose-estimation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  batch_hpe_videos.sh  hmr_gen_data.cpp  hpe_oneshot.cpp  hpe_oneshot_openGL.cpp  hpe_webcam.cpp  hpe_webcam_openGL.cpp  landmark-fitting-cam.cpp  landmark-fitting-cminpack.cpp  landmarks.txt  opengl_test.cpp  time_recorder.cpp
android/: README.md
android/landmark-fitting/: build.gradle
android/landmark-fitting/app/: build.gradle
android/landmark-fitting/app/src/main/cpp/: CMakeLists.txt  android_ceres.cpp
android/landmark-fitting/app/src/main/cpp/ceres/internal/: config.h
android/landmark-fitting/app/src/main/cpp/ceres/internal/miniglog/glog/: logging.h
android/landmark-fitting/app/src/main/java/com/keith/ceres_solver/: CeresSolver.java  Point2d.java  Point3f.java
android/landmark-fitting/app/src/main/java/com/tzutalin/dlibtest/: CameraActivity.java  CameraConnectionFragment.java  MainActivity.java  OnGetImageListener.java
android/landmark-fitting/app/src/main/res/layout/: camera_connection_fragment.xml
android/landmark-fitting/app/src/main/res/values/: strings.xml
android/landmark-fitting/dlib/src/main/java/com/tzutalin/dlib/: Constants.java  PedestrianDet.java
android/landmark-fitting/gradle/wrapper/: gradle-wrapper.properties
cpp/: CMakeLists.txt  README.md  bfm-test.cpp  hpe-cam-ceres-analyticdiff.cpp  hpe-cam-ceres-numericdiff.cpp  hpe-oneshot-ceres-analyticdiff.cpp  hpe-oneshot-ceres-autodiff.cpp  hpe-oneshot-ceres-numericdiff-with-shape.cpp  hpe-oneshot-ceres-numericdiff.cpp  hpe_oneshot.cpp  hpe_webcam.cpp  inputs.txt  time_recorder.cpp
cpp/data/: 68-bfm-landmark.anl
cpp/include/: bfm.h  constant.h  data.h  db_params.h  expr_coef_functor.h  ext_parm_reproj_err.h  functor.h  head_pose_functor.h  hpe.h  io_utils.h  random.h  reg_term.h  shape_coef_functor.h  string_utils.h  total_reproj_err.h  transform.h  type_utils.h  vec.h
cpp/include/functor/: expr_coef_reproj_err.h  ext_params_reproj_err.h  ext_parm_reproj_err.h  functor.h  reg_term.h  shape_coef_reproj_err.h  total_reproj_err.h
cpp/include/functor/parm/: ext_parm_reproj_err.h  int_parm_reproj_err.h  parm_reproj_err.h
cpp/lib/: bfm.cpp  data.cpp  expr_coef_functor.cpp  head_pose_functor.cpp  hpe.cpp  random.cpp  shape_coef_functor.cpp  string_utils.cpp  transform.cpp
cpp/lib/glad/: glad.c
cpp/src/: bfm.cpp  hpe.cpp  transform.cpp
data/: example_landmark_12.anl  example_landmark_6.anl  example_landmark_68.anl
example_inputs/: example_inputs_12.txt  example_inputs_6.txt  example_inputs_68.txt
include/: db_params.h  hpe.h  hpe_problem.h  io_utils.h  shader.h
include/functor/: expr_coef_reproj_err.h  ext_params_reproj_err.h  functor.h  reg_term.h  shape_coef_reproj_err.h
lib/bfm/: .gitignore  CMakeLists.txt  README.md  bfm-ex.cpp  inputs.txt
lib/bfm/include/: bfm.h  constant.h  data.h  random.h  transform.h  type_utils.h
lib/bfm/src/: bfm.cpp  random.cpp
shader/: model.fs  model.vs  plane.fs  plane.vs
src/: hpe.cpp  hpe_problem.cpp
